# urlmap-redirector

./: Dockerfile  LICENSE  Makefile  cloudbuild.yaml  main.py  mygcplogging.py  protodep.toml  pyproject.toml  requirements.txt  run_notify.py  secretm.py  shoutout.py
pb/: healthcheck_pb2.py  healthcheck_pb2_grpc.py  urlmap.pb.go  urlmap_pb2.py  urlmap_pb2_grpc.py
proto/: healthcheck.proto  urlmap.proto
tests/container/: Dockerfile  main.py  mygcplogging.py  requirements.txt
utils/: create-secret.sh  create-topic.sh  do-protodep.sh  reserving-static-ip.sh  workload-identity.sh
