[tool.poetry]
name = "urlmap-redirector"
version = "0.1.0"
description = ""
authors = ["shin5ok <shin5ok@55mp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
grpc-google-iam-v1 = "0.12.3"
grpcio = "^1.47.0"
grpcio-tools = "1.26.0"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
google-cloud-pubsub = "2.7.1"
google-cloud-logging = ">=3.0.0"
prometheus-flask-exporter = "^0.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
